@@ -1,3 +1,12 @@
+2007-10-27  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR gas/5221
+	* config/obj-elf.c (obj_elf_section): Handle optional
+	parameters for .pushsection.
+
+	* doc/as.texinfo: Document optional parameters for
+	.pushsection.
+
 2007-10-24  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* configure.in: Move AM_PROG_LIBTOOL after AC_GNU_SOURCE.
